syntax = "proto3";

package votings_service;

import "google/protobuf/empty.proto";
import "enums.proto";

message BallotStatus {
  oneof kind {
    google.protobuf.Empty unknown = 1;
    google.protobuf.Empty valid = 2;
    votings_service.InvalidReason invalid = 3;
  }
}